Hibajavitas: kizart es nyitott a megvitatasra szimbolum csere.

--- a/NT-sillabusz.tex
+++ b/NT-sillabusz.tex
@@ -213,7 +213,7 @@ A hat lehetséges besorolás:
     is megoldhatónak kell lennie a fenti kategóriákba eső ismeretekkel.   
 
 
-\item[\cexcl\ Nem lehet, de nyitott a megvitatásra]~\\
+\item[\cemay\ Nem lehet, de nyitott a megvitatásra]~\\
     A Syllabus az évek során változik, fejlődik a versennyel együtt, így lehetőség
     adódik arra, hogy egy (valamely korcsoportban) kizárt téma később bekerüljön
     a verseny anyagába. Általában ezek a témakörök kapcsolódnak megengedett témakörökhöz,
@@ -223,7 +223,7 @@ A hat lehetséges besorolás:
     
     Példa: \emph{Szegmensfa\/} ~\S\ref{subsubsec:AL}~Al4
 
-\item[\cemay\ Kizárt]~\\
+\item[\cexcl\ Kizárt]~\\
     Ebbe a kategóriákba főként nehéz algoritmikus módszerek, bonyolult matematikai fogalmak
     tartoznak. Garantált, hogy nem lesz olyan feladat a versenyen, amelynek megoldásához
     elengedhetetlen egy ilyen témakör ismerete. Szintén kívánatos, hogy ezeknek a témáknak
